<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/create_new_account"/>

    <EditText
        android:id="@+id/create_account_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/acc_name_label"
        android:inputType="text"/>

    <EditText
        android:id="@+id/create_account_money"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/acc_deposit_label"
        android:inputType="numberDecimal"/>

    <EditText
        android:id="@+id/create_account_description"
        android:layout_width="match_parent"
        android:layout_height="40pt"
        android:hint="@string/acc_description_label"/>

    <Button
        android:id="@+id/create_account_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:enabled="false"
        android:text="@string/acc_submit_btn_label"
        android:textSize="8pt"/>
</LinearLayout>